syntax = "proto3";

option go_package = "foldmarket/market";

package market;

service Market {
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
    rpc Deposit (DepositRequest) returns (DepositResponse) {}
    rpc Withdraw (WithdrawRequest) returns (WithdrawResponse) {}
}

message WithdrawRequest {
    int32 account_id = 1;
    int64 amount = 2;
}

message WithdrawResponse {
    int32 account_id = 1;
    int64 new_balance = 2;
}

message DepositRequest {
    int32 account_id = 1;
    int64 amount = 2;
}

message DepositResponse {
    int32 account_id = 1;
    int64 new_balance = 2;
}

message GetBalanceRequest {
    int32 account_id = 1;
}

message GetBalanceResponse {
    int32 account_id = 1;
    int64 balance = 2;
}

